# dyn-ip

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-deploy.yml  publish.yml  release.yml  release.yml.old
public/: index.html
scripts/: build-docker.sh  nginx.conf  update,sh
src/: error.rs  main.rs
src/aws/: cloudflare.rs  mod.rs  record.rs  route53.rs
src/dns/: dns_provider.rs  mod.rs
src/dns/cloudflare/: provider.rs
src/dns/r53/: provider.rs
src/server/: api.rs  auth.rs  ip.rs  mod.rs
src/server/routes/: admin.rs  domains.rs  mod.rs
