[package]
name = "dyn-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.46.0"
aws-sdk-route53 = "0.16.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
addr = "0.15.4"
actix-web = "4"
env_logger = "0.9.0"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
